# aihw_myhospitals_api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  pixi.toml  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: R-CMD-check.yaml  ci.yml  cran-submit.yaml  release.yml
examples/: basic_usage.rs  caveats.rs  data_extracts.rs  datasets.rs  downloads.rs  measures.rs  reporting_units.rs
python/aihw_myhospitals_api/: __init__.py  __init__.pyi
r-package/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  cleanup  cleanup.win  configure  configure.win  cran-comments.md
r-package/R/: client.R  extendr-wrappers.R
r-package/man/: MyHospitalsClient.Rd
r-package/src/: Makevars  Makevars.win  entrypoint.c
r-package/src/rust/: Cargo.toml
r-package/src/rust/src/: generated.rs  lib.rs
r-package/tests/: testthat.R
r-package/tests/testthat/: test-client.R
r-package/tools/: prepare-cran.R  submit-cran.R
spec/: swagger.json
src/: lib.rs
src/python/: mod.rs
tests/: test_python.py
