[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aihw-myhospitals-api"
version = "0.1.0"
description = "Python client for the MyHospitals Data API (Australian Institute of Health and Welfare)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "John Clema", email = "john.clema@gmail.com" }]
requires-python = ">=3.8"
keywords = ["api", "client", "healthcare", "australia", "aihw", "hospitals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/JohnClema/aihw_myhospitals_api"
Repository = "https://github.com/JohnClema/aihw_myhospitals_api"
Documentation = "https://github.com/JohnClema/aihw_myhospitals_api#readme"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "aihw_myhospitals_api._core"
