[package]
name = "aihwmyhospitals"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]
name = "aihwmyhospitals"

[dependencies]
extendr-api = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
progenitor-client = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
